통합테스트 수정